[package]
name = "bsproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rustls = "0.21"
tokio-rustls = "0.24"
rcgen = "0.11"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
tokio-tungstenite = "0.20"
http = "0.2"
base64 = "0.21"
sha1 = "0.10"

[[bin]]
name = "bsproxy"
path = "src/main.rs"
