[package]
name = "bsproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
rustls = "0.21"
tokio-rustls = "0.24"
webpki-roots = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
bytes = "1.0"
futures = "0.3"
http = "0.2"
http-body = "0.4"
hyper = { version = "0.14", features = ["full"] }
ssh2 = "0.9"
native-tls = "0.2"
